--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build and Run Unit Tests
+    name: Tests
     runs-on: macos-15
     permissions:
       checks: write
