adjust so tests run on new branches

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,11 +1,5 @@
 name: Build and run unit tests
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+on: [push, pull_request]
 jobs:
   build:
     name: Tests
